--- a/HockeyApp/StartGamePage.xaml
+++ b/HockeyApp/StartGamePage.xaml
@@ -45,7 +45,7 @@
                         Canvas.Left="50" Canvas.Top="220" BorderBrush="White" Click="BtnOption_OnClick" />
             </Canvas>
             
-            <local:VolumeControl Name="VolumeControl" Grid.Row="2" VerticalAlignment="Bottom"></local:VolumeControl>
+            <local:VolumeControl x:Name="vc" Grid.Row="2" VerticalAlignment="Bottom" />
         </Grid>
     </Grid>
 </Page>
