--- a/HockeyApp/VolumeControl.xaml
+++ b/HockeyApp/VolumeControl.xaml
@@ -16,6 +16,6 @@
         </Grid.ColumnDefinitions>
         
         <Button x:Name="btn_mute" Grid.Column="0" VerticalAlignment="Bottom" Margin="10"  Style="{StaticResource btn_SoundControl_on}" Click="Btn_mute_OnClick" />
-        <Slider x:Name="VolumeSlider"  Background="White"  Grid.Column="1" HorizontalAlignment="Left" VerticalAlignment="Bottom" Width="100" Height="37" ValueChanged="VolumeSlider_OnValueChanged" />
+        <Slider x:Name="VolumeSlider"  Background="White" Minimum="0" Maximum="10" StepFrequency="1"  Value="5"  Grid.Column="1" HorizontalAlignment="Left" VerticalAlignment="Bottom" Width="100" Height="37" ValueChanged="VolumeSlider_OnValueChanged" />
     </Grid>
 </UserControl>
