Finally made it work

--- a/HockeyApp/App.xaml
+++ b/HockeyApp/App.xaml
@@ -45,7 +45,7 @@
                     <ControlTemplate TargetType="Frame">
                         <Grid>
                             <!-- Background Player -->
-                            <MediaElement x:Name="BgSound" IsLooping="True" Source="Assets/Sounds/Wigle_8bit.mp3" />
+                            <MediaElement x:Name="BgSound" IsLooping="True" Source="Assets/Sounds/Wigle_8bit.mp3" IsMuted="True" />
                             <ContentPresenter />
                         </Grid>
                     </ControlTemplate>
