--- a/HockeyApp/BTConnecting.xaml
+++ b/HockeyApp/BTConnecting.xaml
@@ -19,8 +19,9 @@
         <Image x:Name="Logo" Grid.Row ="1" Source="Assets/Mainlogo.png" HorizontalAlignment="Stretch" Margin="5,0,0,0"/>
         <RelativePanel x:Name="Panel" Grid.Row="2" HorizontalAlignment="Center" VerticalAlignment="Center">
             <Button x:Name="btn_Connect" Content="Connect Now !" Foreground="White" Background="CadetBlue" HorizontalAlignment="Center" Click="Btn_Connect_OnClick"/>
-            <ToggleSwitch x:Name="ts_led"  Foreground="White"  Toggled="Ts_led_OnToggled" RelativePanel.Below="btn_Connect" Background="CadetBlue"/>
+            <ToggleSwitch x:Name="ts_led"  Foreground="White"  Toggled="Ts_led_OnToggled" RelativePanel.Below="btn_Connect" Background="CadetBlue" IsEnabled="False"/>
             <TextBlock x:Name="Status" RelativePanel.Below="ts_led" Foreground="White" />
+            
         </RelativePanel>
         <local:VolumeControl Grid.Row="2" VerticalAlignment="Bottom" x:Name="vc" />
     </Grid>
