--- a/HockeyApp/BTConnecting.xaml
+++ b/HockeyApp/BTConnecting.xaml
@@ -21,7 +21,7 @@
             <Button x:Name="btn_Connect" Content="Connect Now !" Foreground="White" Background="CadetBlue" HorizontalAlignment="Center" Click="Btn_Connect_OnClick"/>
             <ToggleSwitch x:Name="ts_led"  Foreground="White"  Toggled="Ts_led_OnToggled" RelativePanel.Below="btn_Connect" Background="CadetBlue" IsEnabled="False"/>
             <TextBlock x:Name="Status" RelativePanel.Below="ts_led" Foreground="White" />
-            
+            <!--<Button x:Name="btn_ON_OFF" Content="ON" RelativePanel.Below="ts_led" Click="btn_ON_OFF_Click" Foreground="White" BorderBrush="Yellow" BorderThickness="2" />-->
         </RelativePanel>
         <local:VolumeControl Grid.Row="2" VerticalAlignment="Bottom" x:Name="vc" />
     </Grid>
