--- a/HockeyApp/MainMenu.xaml
+++ b/HockeyApp/MainMenu.xaml
@@ -35,9 +35,9 @@
         <Grid Background="Black">
             <Grid.RowDefinitions>
                 <RowDefinition/>
-                <RowDefinition Height="128"></RowDefinition>
-                <RowDefinition Height="14*"></RowDefinition>
-                <RowDefinition/>
+                <RowDefinition Height="128" />
+                <RowDefinition Height="14*" />
+                <RowDefinition Height="auto" />
             </Grid.RowDefinitions>
             <TextBlock x:Name="UpperPadding" Grid.Row="0"></TextBlock>
             <TextBlock x:Name="LowerPadding" Grid.Row ="3"></TextBlock>
@@ -46,7 +46,21 @@
                 <Button x:Name="BtnGame" Content="Play Game" Style="{StaticResource RedButton}" Click="BtnGame_OnClick" Margin="10,20,10,20" />
                 <Button x:Name="BtnScoreBoard" Content="Scoreboard" Style="{StaticResource RedButton}"  Click="BtnScoreBoard_OnClick" Margin="10,20,10,0" />
             </RelativePanel>
-            <local:VolumeControl Grid.Row="2" VerticalAlignment="Bottom" x:Name="vc" />
+            <Grid x:Name="grid_footer" Grid.Row="3">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="auto" />
+                    <ColumnDefinition Width="Auto"  />
+                </Grid.ColumnDefinitions>
+
+                <!--<local:VolumeControl  VerticalAlignment="Bottom" x:Name="vc" Grid.Column="0" />-->
+                <Button x:Name="btn_Settings" Grid.Column="1" HorizontalAlignment="Right">
+                    <Button.Template>
+                        <ControlTemplate>
+                            <Image x:Name="Source" Source="Assets/settings_icon.png" Height="40" Width="40" />
+                        </ControlTemplate>
+                    </Button.Template>
+                </Button>
+            </Grid>
         </Grid>
     </Grid>
 </Page>
