--- a/HockeyApp/Game.xaml
+++ b/HockeyApp/Game.xaml
@@ -10,7 +10,7 @@
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <Grid Background="Black">
             <Grid.RowDefinitions>
-                <RowDefinition />
+                <RowDefinition /> 
                 <RowDefinition Height="128" />
                 <RowDefinition Height="14*" />
                 <RowDefinition />
@@ -25,18 +25,18 @@
                     <RowDefinition />
                     <RowDefinition />
                 </Grid.RowDefinitions>
-                
-                    <!--<c4FToolkit:TimeSpanPicker   x:Name="timeSpan" Value="0" HorizontalAlignment="Center"/>--> 
-                <TextBlock x:Name="tb_Timer" Grid.Row="0"  Text="TextBlock" Height="97" Width="281" Style="{StaticResource  RedTextBlock}" Margin="0,0,0,30">
+
+                <!--<c4FToolkit:TimeSpanPicker   x:Name="timeSpan" Value="0" HorizontalAlignment="Center"/>-->
+                <TextBlock x:Name="tb_Timer" Grid.Row="0"  Text="05:00" Height="auto" Width="auto" Style="{StaticResource  RedTextBlock}" Margin="0,0,0,30">
                     <TextBlock.Resources>
                         <Storyboard x:Name="myStoryboard">
-                        <!-- Animate the background color of the canvas from red to green over 4 seconds. -->
+                            <!-- Animate the background color of the canvas from red to green over 4 seconds. -->
                             <ColorAnimation Storyboard.TargetName="tb_Timer"
                                 Storyboard.TargetProperty="Forground"
                                 From="Red" To="Green" Duration="0:0:4" />
                         </Storyboard>
                     </TextBlock.Resources>
-                    
+
                 </TextBlock>
                 <Grid Grid.Row="1" Margin="20,0,20,0">
                     <Grid.RowDefinitions>
@@ -56,10 +56,10 @@
                                FontSize="48" TextAlignment="Center" Margin="5" Grid.RowSpan="2">
                         <Run FontSize="40" Text="Robot" />
                     </TextBlock>
-                    <TextBlock x:Name="UserScore" Grid.Row="1" Grid.Column="0" Text="3" Width="145"
+                    <TextBlock x:Name="UserScore" Grid.Row="1" Grid.Column="0" Text="0" Width="145"
                                Foreground="#FF1F00E4" FontSize="96" FontFamily="Assets/digital-7.ttf#Digital-7"
                                TextAlignment="Center" />
-                    <TextBlock x:Name="RobotScore" Grid.Row="1" Grid.Column="1" Text="5" Width="145"
+                    <TextBlock x:Name="RobotScore" Grid.Row="1" Grid.Column="1" Text="0" Width="145"
                                Foreground="#FF1F00E4" FontSize="96" FontFamily="Assets/digital-7.ttf#Digital-7"
                                TextAlignment="Center" />
                     <TextBlock x:Name="User" Grid.Row="0" Grid.Column="0" TextWrapping="Wrap" Width="145"
@@ -70,16 +70,16 @@
                 </Grid>
                 <!--<Image x:Name="scoreTable" Grid.Row ="1" Source="Assets/ScoreTable.PNG" HorizontalAlignment="Stretch" Canvas.Left="43" Canvas.Top="211"/>-->
 
-                <Button x:Name="PauseButton" HorizontalAlignment="Stretch" Margin="140,0,118,10" Grid.Row="2"
-                        VerticalAlignment="Bottom" d:LayoutOverrides="LeftPosition, RightPosition" Height="75" Click="PauseButton_OnClick">
+                <Button x:Name="PauseButton" HorizontalAlignment="Stretch" Margin="102,0,108,42" Grid.Row="2"
+                        VerticalAlignment="Bottom" Height="75" Width="150" Click="PauseButton_OnClick">
                     <Button.Background>
                         <ImageBrush Stretch="Fill" ImageSource="Assets/pouseButton.png" />
                     </Button.Background>
                 </Button>
             </Grid>
 
-        <local:VolumeControl Name="VolumeControl" Grid.Row="2" VerticalAlignment="Bottom"></local:VolumeControl>
+            <local:VolumeControl Name="VolumeControl" Grid.Row="2" VerticalAlignment="Bottom"></local:VolumeControl>
         </Grid>
-        
+
     </Grid>
 </Page>
