--- a/HockeyApp/Settings.xaml
+++ b/HockeyApp/Settings.xaml
@@ -1,18 +1,12 @@
 ﻿<Page
-    x:Class="HockeyApp.MainMenu"
+    x:Class="HockeyApp.Settings"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:HockeyApp"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-   
-    mc:Ignorable="d"
-    FontFamily="Arial"
-    Foreground="White"
-    FontSize="32">
+    mc:Ignorable="d">
 
-    
-    
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <VisualStateManager.VisualStateGroups>
             <VisualStateGroup>
@@ -21,12 +15,12 @@
                         <AdaptiveTrigger MinWindowHeight="500" />
                     </VisualState.StateTriggers>
                     <VisualState.Setters>
-                        <Setter Target="BtnScoreBoard.(RelativePanel.Below)" Value="BtnGame" />
+                        <Setter Target="btn_shutMusicDown.(RelativePanel.Below)" Value="btn_BTConnect" />
                     </VisualState.Setters>
                 </VisualState>
                 <VisualState x:Name="narrowView">
                     <VisualState.Setters>
-                        <Setter Target="BtnScoreBoard.(RelativePanel.RightOf)" Value="BtnGame" />
+                        <Setter Target="btn_shutMusicDown.(RelativePanel.RightOf)" Value="btn_BTConnect" />
                     </VisualState.Setters>
                     <VisualState.StateTriggers>
                         <AdaptiveTrigger MinWindowHeight="0" />
@@ -34,10 +28,6 @@
                 </VisualState>
             </VisualStateGroup>
         </VisualStateManager.VisualStateGroups>
-
-        
-     
-
         <Grid Background="Black">
             <Grid.RowDefinitions>
                 <RowDefinition/>
@@ -46,11 +36,12 @@
                 <RowDefinition Height="auto" />
             </Grid.RowDefinitions>
             <TextBlock x:Name="UpperPadding" Grid.Row="0"></TextBlock>
-            <Button x:Name="btn_Playground" Content="PlayGround" Grid.Row="0" Background="Red" Click="btn_Playground_Click"/>
+
             <Image x:Name="Logo" Grid.Row ="1" Source="Assets/Mainlogo.png" HorizontalAlignment="Stretch" Margin="5,0,0,0"/>
             <RelativePanel x:Name="rp_options" Grid.Row="2" VerticalAlignment="Center" HorizontalAlignment="Center"  >
-                <Button x:Name="BtnGame" Content="Play Game" Style="{StaticResource RedButton}" Click="BtnGame_OnClick" Margin="10,20,10,20" />
-                <Button x:Name="BtnScoreBoard" Content="Scoreboard" Style="{StaticResource RedButton}"  Click="BtnScoreBoard_OnClick" Margin="10,20,10,0" />
+                <Button x:Name="btn_BTConnect" Content="Connect" Style="{StaticResource RedButton}" Click="btn_BTConnect_Click" Margin="10,20,10,20" />
+                <Image x:Name="bt_icon" RelativePanel.RightOf="btn_BTConnect" Width="50" Height="50"  Margin="0,30,0,0" Source="Assets/bt_icon.png"/>
+                <Button x:Name="btn_shutMusicDown" Content="" Style="{StaticResource RedButton}"  Margin="10,20,10,0" />
             </RelativePanel>
             <Grid x:Name="grid_footer" Grid.Row="3" Height="45" VerticalAlignment="Bottom">
                 <Grid.ColumnDefinitions>
@@ -60,13 +51,7 @@
 
                 <local:VolumeControl  VerticalAlignment="Bottom" x:Name="vc" Grid.Column="0" />
 
-                <Button x:Name="btn_Settings" Grid.Column="1" HorizontalAlignment="Right" Margin="0,0,10,0" Click="btn_Settings_Click" >
-                    <Button.Template>
-                        <ControlTemplate>
-                            <Image x:Name="Source" Source="Assets/settings_icon.png" Height="25" Width="25" />
-                        </ControlTemplate>
-                    </Button.Template>
-                </Button>
+
             </Grid>
         </Grid>
     </Grid>
