--- a/HockeyApp/Game.xaml
+++ b/HockeyApp/Game.xaml
@@ -11,23 +11,23 @@
         <Grid Background="Black">
             <Grid.RowDefinitions>
                 <RowDefinition /> 
-                <RowDefinition Height="128" />
+                <RowDefinition Height="auto" />
                 <RowDefinition Height="14*" />
                 <RowDefinition />
             </Grid.RowDefinitions>
+            <TextBlock x:Name="Debug" Foreground="Red" HorizontalAlignment="Center" Grid.Row="0" Text="DEBUG" />
             <TextBlock x:Name="UpperPadding" Grid.Row="0" Text="" />
             <TextBlock x:Name="lowerPadding" Grid.Row="3" Text="" />
-            <Image x:Name="logo" Grid.Row="1" Source="Assets/Mainlogo.png" HorizontalAlignment="Stretch"
-                   Margin="5,0,0,0" />
+            <Image x:Name="logo" Grid.Row="1" Source="Assets/MainLogo.jpg" HorizontalAlignment="Stretch"   />
             <Grid Grid.Row="2">
                 <Grid.RowDefinitions>
                     <RowDefinition />
                     <RowDefinition />
                     <RowDefinition />
                 </Grid.RowDefinitions>
-
+                
                 <!--<c4FToolkit:TimeSpanPicker   x:Name="timeSpan" Value="0" HorizontalAlignment="Center"/>-->
-                <TextBlock x:Name="tb_Timer" Grid.Row="0"  Text="05:00" Height="auto" Width="auto" Style="{StaticResource  RedTextBlock}" Margin="0,0,0,30">
+                <TextBlock x:Name="tb_Timer" Grid.Row="0"  Text="05:00" Height="auto" Width="auto" Style="{StaticResource  RedTextBlock}" Margin="0,0,0,0">
                     <TextBlock.Resources>
                         <Storyboard x:Name="myStoryboard">
                             <!-- Animate the background color of the canvas from red to green over 4 seconds. -->
@@ -56,16 +56,16 @@
                                FontSize="48" TextAlignment="Center" Margin="5" Grid.RowSpan="2">
                         <Run FontSize="40" Text="Robot" />
                     </TextBlock>
-                    <TextBlock x:Name="UserScore" Grid.Row="1" Grid.Column="0" Text="0" Width="145"
+                    <TextBlock x:Name="tb_UserScore" Grid.Row="1" Grid.Column="0" Text="6" Width="145"
                                Foreground="#FF1F00E4" FontSize="96" FontFamily="Assets/digital-7.ttf#Digital-7"
                                TextAlignment="Center" />
-                    <TextBlock x:Name="RobotScore" Grid.Row="1" Grid.Column="1" Text="0" Width="145"
+                    <TextBlock x:Name="tb_RobotScore" Grid.Row="1" Grid.Column="1" Text="9" Width="145"
                                Foreground="#FF1F00E4" FontSize="96" FontFamily="Assets/digital-7.ttf#Digital-7"
                                TextAlignment="Center" />
-                    <TextBlock x:Name="User" Grid.Row="0" Grid.Column="0" TextWrapping="Wrap" Width="145"
+                    <TextBlock x:Name="tb_player" Grid.Row="0" Grid.Column="0" TextWrapping="Wrap" Width="145"
                                Foreground="#FF1F00E4"
                                FontFamily="Assets/QuirkyRobot.ttf#QuirkyRobot" FontSize="40" TextAlignment="Center"
-                               Text="User"
+                               Text="Playerr"
                                Margin="5" />
                 </Grid>
                 <!--<Image x:Name="scoreTable" Grid.Row ="1" Source="Assets/ScoreTable.PNG" HorizontalAlignment="Stretch" Canvas.Left="43" Canvas.Top="211"/>-->
