--- a/HockeyApp/MainMenu.xaml
+++ b/HockeyApp/MainMenu.xaml
@@ -40,15 +40,15 @@
 
         <Grid Background="Black">
             <Grid.RowDefinitions>
-                <RowDefinition/>
-                <RowDefinition Height="128" />
+                <RowDefinition />
+                <RowDefinition Height="auto" />
                 <RowDefinition Height="14*" />
                 <RowDefinition Height="auto" />
             </Grid.RowDefinitions>
             <TextBlock x:Name="UpperPadding" Grid.Row="0"></TextBlock>
-            <Button x:Name="btn_Playground" Content="PlayGround" Grid.Row="0" Background="Red" Click="btn_Playground_Click"/>
-            <Image x:Name="Logo" Grid.Row ="1" Source="Assets/Mainlogo.png" HorizontalAlignment="Stretch" Margin="5,0,0,0"/>
-            <RelativePanel x:Name="rp_options" Grid.Row="2" VerticalAlignment="Center" HorizontalAlignment="Center"  >
+            <Button x:Name="btn_Playground" Content="PlayGround" Grid.Row="0" Background="Red" Click="btn_Playground_Click" Visibility="Collapsed" />
+            <Image x:Name="Logo" Grid.Row ="1" HorizontalAlignment="Stretch" Source="Assets/MainLogo.jpg"/>
+            <RelativePanel x:Name="rp_options" Grid.Row="2" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0,0,0,60"  >
                 <Button x:Name="BtnGame" Content="Play Game" Style="{StaticResource RedButton}" Click="BtnGame_OnClick" Margin="10,20,10,20" />
                 <Button x:Name="BtnScoreBoard" Content="Scoreboard" Style="{StaticResource RedButton}"  Click="BtnScoreBoard_OnClick" Margin="10,20,10,0" />
             </RelativePanel>
