--- a/HockeyApp/Settings.xaml
+++ b/HockeyApp/Settings.xaml
@@ -31,13 +31,13 @@
         <Grid Background="Black">
             <Grid.RowDefinitions>
                 <RowDefinition/>
-                <RowDefinition Height="128" />
+                <RowDefinition Height="auto" />
                 <RowDefinition Height="14*" />
                 <RowDefinition Height="auto" />
             </Grid.RowDefinitions>
             <TextBlock x:Name="UpperPadding" Grid.Row="0"></TextBlock>
 
-            <Image x:Name="Logo" Grid.Row ="1" Source="Assets/Mainlogo.png" HorizontalAlignment="Stretch" Margin="5,0,0,0"/>
+            <Image x:Name="Logo" Grid.Row ="1" Source="Assets/Mainlogo.jpg" HorizontalAlignment="Stretch" />
             <RelativePanel x:Name="rp_options" Grid.Row="2" VerticalAlignment="Center" HorizontalAlignment="Center"  >
                 <Button x:Name="btn_BTConnect" Content="Connect" Style="{StaticResource RedButton}" Click="btn_BTConnect_Click" Margin="10,20,10,20" />
                 <Image x:Name="bt_icon" RelativePanel.RightOf="btn_BTConnect" Width="50" Height="50"  Margin="0,30,0,0" Source="Assets/bt_icon.png"/>
