--- a/HockeyApp/MainMenu.xaml
+++ b/HockeyApp/MainMenu.xaml
@@ -46,7 +46,7 @@
                 <RowDefinition Height="auto" />
             </Grid.RowDefinitions>
             <TextBlock x:Name="UpperPadding" Grid.Row="0"></TextBlock>
-            <Button x:Name="btn_Playground" Content="PlayGround" Grid.Row="0" Background="Red" Click="btn_Playground_Click" Visibility="Visible" />
+            <Button x:Name="btn_Playground" Content="PlayGround" Grid.Row="0" Background="Red" Click="btn_Playground_Click" Visibility="Collapsed" />
             <Image x:Name="Logo" Grid.Row ="1" HorizontalAlignment="Stretch" Source="Assets/MainLogo.jpg"/>
             <RelativePanel x:Name="rp_options" Grid.Row="2" VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0,0,0,60"  >
                 <Button x:Name="BtnGame" Content="Play Game" Style="{StaticResource RedButton}" Click="BtnGame_OnClick" Margin="10,20,10,20" />
@@ -60,7 +60,7 @@
 
                 <local:VolumeControl  VerticalAlignment="Bottom" x:Name="vc" Grid.Column="0" />
 
-                <Button x:Name="btn_Settings" Grid.Column="1" HorizontalAlignment="Right" Margin="0,0,10,0" Click="btn_Settings_Click" >
+                <Button x:Name="btn_Settings" Grid.Column="1" HorizontalAlignment="Right" Margin="0,0,10,0" Click="btn_Settings_Click" Visibility="Collapsed" >
                     <Button.Template>
                         <ControlTemplate>
                             <Image x:Name="Source" Source="Assets/settings_icon.png" Height="25" Width="25" />
