--- a/HockeyApp/ScoreBoard.xaml
+++ b/HockeyApp/ScoreBoard.xaml
@@ -39,7 +39,7 @@
                 </StackPanel>
                 <Border Grid.Row="2" Grid.RowSpan="2">
                     <StackPanel>                        <!-- Style="{StaticResource PanelStyle1}" Width="400-->
-                        <ListView x:Name="RankingsListView" ItemsSource="{Binding TimeLimitedGames}" SelectionMode="None">
+                        <ListView x:Name="ByTimeListView" ItemsSource="{Binding TimeLimitedGames}" SelectionMode="None" Visibility="Collapsed">
                             <ListView.ItemContainerStyle>
                                 <Style TargetType="ListViewItem">
                                     <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
@@ -51,8 +51,8 @@
                                 <Grid>
                                     <Grid.ColumnDefinitions>
                                         <ColumnDefinition Width="*"></ColumnDefinition>
+                                        <ColumnDefinition Width="3*"></ColumnDefinition>
                                         <ColumnDefinition Width="2*"></ColumnDefinition>
-                                        <ColumnDefinition Width="*"></ColumnDefinition>
                                     </Grid.ColumnDefinitions>
                                     <TextBlock Text="Rank"/>                                    <!-- Style="{StaticResource ListItemHeaderStyle}"-->
                                     <TextBlock Grid.Column="1" Text="Player"/>                                    <!-- Style="{StaticResource ListItemHeaderStyle}"-->
@@ -66,12 +66,55 @@
                                     <Grid>
                                         <Grid.ColumnDefinitions>
                                             <ColumnDefinition Width="*"/>
+                                            <ColumnDefinition Width="3*"/>
                                             <ColumnDefinition Width="2*"/>
-                                            <ColumnDefinition Width="*"/>
                                         </Grid.ColumnDefinitions>
                                         <TextBlock Text="{Binding Path=Rank}" Foreground="White"/>                                        <!-- Style="{StaticResource PlayerRankTextStyle}"-->
                                         <TextBlock Text="{Binding Path=Name}" Foreground="White" Grid.Column="1"/>                                        <!-- Style="{StaticResource ListItemTextStyle}"-->
                                         <TextBlock Text="{Binding Path=PlayerScore}" Foreground="White" Grid.Column="2"/>                                        <!-- Style="{StaticResource ListItemTextStyle}" TextAlignment="Right"-->
+                                    </Grid>
+                                </DataTemplate>
+                            </ListView.ItemTemplate>
+                        </ListView>
+                        <ListView x:Name="ByScoreListView" ItemsSource="{Binding ScoreLimitedGames}" SelectionMode="None" Visibility="Collapsed">
+                            <ListView.ItemContainerStyle>
+                                <Style TargetType="ListViewItem">
+                                    <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
+                                    <Setter Property="HorizontalAlignment" Value="Stretch"/>
+                                </Style>
+                            </ListView.ItemContainerStyle>
+
+                            <ListView.Header>
+                                <Grid>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="*"></ColumnDefinition>
+                                        <ColumnDefinition Width="3*"></ColumnDefinition>
+                                        <ColumnDefinition Width="2*"></ColumnDefinition>
+                                    </Grid.ColumnDefinitions>
+                                    <TextBlock Text="Rank"/>
+                                    <!-- Style="{StaticResource ListItemHeaderStyle}"-->
+                                    <TextBlock Grid.Column="1" Text="Player"/>
+                                    <!-- Style="{StaticResource ListItemHeaderStyle}"-->
+                                    <TextBlock Grid.Column="2" Text="Duration"/>
+                                    <!-- Style="{StaticResource ListItemHeaderStyle}"-->
+
+                                </Grid>
+                            </ListView.Header>
+
+                            <ListView.ItemTemplate>
+                                <DataTemplate>
+                                    <Grid>
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition Width="*"/>
+                                            <ColumnDefinition Width="3*"/>
+                                            <ColumnDefinition Width="2*"/>
+                                        </Grid.ColumnDefinitions>
+                                        <TextBlock Text="{Binding Path=Rank}" Foreground="White"/>
+                                        <!-- Style="{StaticResource PlayerRankTextStyle}"-->
+                                        <TextBlock Text="{Binding Path=Name}" Foreground="White" Grid.Column="1"/>
+                                        <!-- Style="{StaticResource ListItemTextStyle}"-->
+                                        <TextBlock Text="{Binding Path=Duration}" Foreground="White" Grid.Column="2"/>
+                                        <!-- Style="{StaticResource ListItemTextStyle}" TextAlignment="Right"-->
                                     </Grid>
                                 </DataTemplate>
                             </ListView.ItemTemplate>
