--- a/HockeyApp/ScoreBoard.xaml
+++ b/HockeyApp/ScoreBoard.xaml
@@ -43,16 +43,17 @@
                            Foreground="#FFCD2323" FontWeight="Bold" HorizontalAlignment="Center" FontSize="50.667" />
 
                 <StackPanel x:Name="stkPnl_options" Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Center">
-                    <Button x:Name="btn_ByTime" Style="{StaticResource RedButton}" Content="By Time" Height="40"
-                            FontSize="20" BorderBrush="White" Padding="8,8,8,0" Margin="5,0" Click="btn_changeBy_Click" />
-                    <Button x:Name="btn_ByScore" Style="{StaticResource RedButton}" Content="By Score" Height="40" Click="btn_changeBy_Click"
-                            FontSize="20" BorderBrush="White" Padding="8,8,8,0" Margin="5,0" />
+                    <Button x:Name="btn_ByTime" Style="{StaticResource RedButton}" Foreground="#FF118AC3" Content="By Time" Height="40"
+                            FontSize="20"  Padding="8,8,8,0" Margin="5,0" Click="btn_changeBy_Click" />
+                    <Button x:Name="btn_ByScore" Style="{StaticResource RedButton}" Foreground="#FF118AC3" Content="By Score" Height="40" Click="btn_changeBy_Click"
+                            FontSize="20"  Padding="8,8,8,0" Margin="5,0" />
                 </StackPanel>
                 <Border Grid.Row="2" Grid.RowSpan="2">
                     <Grid>
                         <ProgressRing x:Name="ProgressRing1" Width="60" Height="60" IsActive="{Binding IsPending}"/>
                         <StackPanel>
                             <!-- Style="{StaticResource PanelStyle1}" Width="400-->
+
                             <ListView x:Name="ByTimeListView" ItemsSource="{Binding TimeLimitedGames}" SelectionMode="None" Visibility="Collapsed">
                                 <ListView.ItemContainerStyle>
                                     <Style TargetType="ListViewItem">
@@ -94,42 +95,45 @@
                                     </DataTemplate>
                                 </ListView.ItemTemplate>
                             </ListView>
+
                             <ListView x:Name="ByScoreListView" ItemsSource="{Binding ScoreLimitedGames}" SelectionMode="None" Visibility="Collapsed">
+
                                 <ListView.ItemContainerStyle>
-                                    <Style TargetType="ListViewItem">
-                                        <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
-                                        <Setter Property="HorizontalAlignment" Value="Stretch"/>
-                                    </Style>
-                                </ListView.ItemContainerStyle>
+                                        <Style TargetType="ListViewItem">
+                                            <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
+                                            <Setter Property="HorizontalAlignment" Value="Stretch"/>
+                                        </Style>
+                                    </ListView.ItemContainerStyle>
 
-                                <ListView.Header>
-                                    <Grid>
-                                        <Grid.ColumnDefinitions>
-                                            <ColumnDefinition Width="*"></ColumnDefinition>
-                                            <ColumnDefinition Width="3*"></ColumnDefinition>
-                                            <ColumnDefinition Width="2*"></ColumnDefinition>
-                                        </Grid.ColumnDefinitions>
-                                        <TextBlock Text="Rank" Style="{StaticResource ListItemHeaderStyle}"/>
-                                        <TextBlock Grid.Column="1" Text="Player" Style="{StaticResource ListItemHeaderStyle}"/>
-                                        <TextBlock Grid.Column="2" Text="Duration" Style="{StaticResource ListItemHeaderStyle}"/>
-                                    </Grid>
-                                </ListView.Header>
-
-                                <ListView.ItemTemplate>
-                                    <DataTemplate>
+                                    <ListView.Header>
                                         <Grid>
                                             <Grid.ColumnDefinitions>
-                                                <ColumnDefinition Width="*"/>
-                                                <ColumnDefinition Width="3*"/>
-                                                <ColumnDefinition Width="2*"/>
+                                                <ColumnDefinition Width="*"></ColumnDefinition>
+                                                <ColumnDefinition Width="3*"></ColumnDefinition>
+                                                <ColumnDefinition Width="2*"></ColumnDefinition>
                                             </Grid.ColumnDefinitions>
-                                            <TextBlock Text="{Binding Path=Rank}" Foreground="White" Style="{StaticResource ListItemTextStyle}"/>
-                                            <TextBlock Text="{Binding Path=Name}" Foreground="White" Grid.Column="1" Style="{StaticResource ListItemTextStyle}"/>
-                                            <TextBlock Text="{Binding Path=Duration}" Foreground="White" Grid.Column="2" Style="{StaticResource ListItemTextStyle}"/>
+                                            <TextBlock Text="Rank" Style="{StaticResource ListItemHeaderStyle}"/>
+                                            <TextBlock Grid.Column="1" Text="Player" Style="{StaticResource ListItemHeaderStyle}"/>
+                                            <TextBlock Grid.Column="2" Text="Duration" Style="{StaticResource ListItemHeaderStyle}"/>
                                         </Grid>
-                                    </DataTemplate>
-                                </ListView.ItemTemplate>
-                            </ListView>
+                                    </ListView.Header>
+
+                                    <ListView.ItemTemplate>
+                                        <DataTemplate>
+                                            <Grid>
+                                                <Grid.ColumnDefinitions>
+                                                    <ColumnDefinition Width="*"/>
+                                                    <ColumnDefinition Width="3*"/>
+                                                    <ColumnDefinition Width="2*"/>
+                                                </Grid.ColumnDefinitions>
+                                                <TextBlock Text="{Binding Path=Rank}" Foreground="White" Style="{StaticResource ListItemTextStyle}"/>
+                                                <TextBlock Text="{Binding Path=Name}" Foreground="White" Grid.Column="1" Style="{StaticResource ListItemTextStyle}"/>
+                                                <TextBlock Text="{Binding Path=Duration}" Foreground="White" Grid.Column="2" Style="{StaticResource ListItemTextStyle}"/>
+                                            </Grid>
+                                        </DataTemplate>
+                                    </ListView.ItemTemplate>
+                                </ListView>
+
                             <Button Content="Refresh" x:Name="RefreshRankings"/>
                         </StackPanel>
                     </Grid>
